    * setNodePair <keyNodeName> <keyNodeTextContent> <valueNodeName> <valueNodeTextContent>
      used for Apple info.plist
 * osxmlsections: TuibXMLDocument: new:
    setNodePair(keyNodeName: string; keyNodeTextContent: string;
      valueNodeName: string; valueNodeTextContent: string): boolean;
 * Execwith: if there is a parameter '/signscript <path to ca file>',
   then the existing 'ca fiule' should be used to sign the temporary file
   before passing it to the interpreter.
   In the first step implemented for signing powershell scripts with pfx files.

-- d.oertel <d.oertel@uib.de> Tue, 31 Aug 2021 15:00

opsi-script (4.12.4.27) stable; urgency=low

 * new generic section parameter /AllUserProfiles (as alias for /AllNTUserProfiles)
 * osxmlsections: fixes for creating not existing file
 * osparser: doXMLPatcg2Main: check acces rights and for successful savetofile
 * osparser: handleFileExists32: fileexists for win also via shlwapi.PathFileExistsW
 * new unit oswinacl with function AddAccessRightsToACL
 * osfunc: FileGetWriteAccess calls at windows also AddAccessRightsToACL
 * osencoding: saveTextFileWithEncoding: ForceDirectories for output
 * osfunc: toCopyOrNotToCopy: fix for copy -r

-- d.oertel <d.oertel@uib.de> Thu, 12 Aug 2021 15:00

opsi-script (4.12.4.26) stable; urgency=low

 * Parameter 'pcprofil' not supported any more
 * osencoding: new function  isPlainAsciiString(const searchText: string): boolean;
 * osencoding: func searchEncoding now detectd also isPlainAscii
 * osparser: supress any encoding Warnings if isPlainAscii
 * osencoding: getFileBom: added fmShareDenyNone to open mode
 * osencoding: getFileBom: 3 retries
 * osparser: tsImportLib: do not reload the file at 'Imported all functions from file'
 * osparser: tsecExpected: (external sub sections): try-exept getFileBom +  LoadValidLinesFromFile

-- d.oertel <d.oertel@uib.de> Tue, 27 Jul 2021 15:00

opsi-script (4.12.4.25) stable; urgency=low

 * switch to Lazarus 2.2 / FPC 3.2.2