@@ -12,9 +12,10 @@ opsi-script (4.12.4.28) stable; urgency=low
     setNodePair(keyNodeName: string; keyNodeTextContent: string;
       valueNodeName: string; valueNodeTextContent: string): boolean;
  * Execwith: if there is a parameter '/signscript <path to ca file>',
-   then the existing 'ca fiule' should be used to sign the temporary file
+   then the existing 'ca file' should be used to sign the temporary file
    before passing it to the interpreter.
    In the first step implemented for signing powershell scripts with pfx files.
+ * osfunc: additional log at FileCheckDate
 
 -- d.oertel <d.oertel@uib.de> Tue, 31 Aug 2021 15:00
 
